--- a/JGym/templates/index.html
+++ b/JGym/templates/index.html
@@ -60,7 +60,7 @@
 
           {% if not request.user.is_authenticated %}
 
-          <li><a class="nav-link scrollto" href="/signup">Signin</a></li>
+          <li><a class="nav-link scrollto" href="/SignUp">Signin</a></li>
          {% else %}
          <li><a class="nav-link scrollto" href="/logout">Logout</a></li>
 
