signup auth done

--- a/JGym/templates/signup.html
+++ b/JGym/templates/signup.html
@@ -24,7 +24,7 @@ SignUp
     {% endfor %}
     
     
-    <form action="/signup" method="post">{% csrf_token %}
+    <form action="/SignUp" method="post">{% csrf_token %}
     
         <div class="form-group">
             <input type="number" class="form-control mb-2" name="usernumber" placeholder="Phone Number" required>
