--- a/JGym/templates/handleLogin.html
+++ b/JGym/templates/handleLogin.html
@@ -28,9 +28,9 @@ Login
     
       
 
-    <div class="form-group">
-    <input type="email" class="form-control" name="email" placeholder="Email" required>
-    </div>
+      <div class="form-group">
+        <input type="number" class="form-control mb-2" name="usernumber" placeholder="Phone Number" required>
+        </div>
  
     
     
