--- a/JGym/templates/base.html
+++ b/JGym/templates/base.html
@@ -56,13 +56,26 @@
         
               <li><a href="/profile">View Profile</a></li>
             </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="/SignUp">Signin</a></li>
+            {% if not request.user.is_authenticated %}
+
+            <li><a class="nav-link scrollto" href="/SignUp">Signin</a></li>
+           {% else %}
+           <li><a class="nav-link scrollto" href="/logout">Logout</a></li>
+  
+  
+           {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
+      
+      {% if  request.user.is_authenticated %}
+      <a href="/" class="get-started-btn scrollto">Welcome</a>
+      {%else%}
       <a href="/achivements" class="get-started-btn scrollto">Gym Awards</a>
+
+      {% endif %}
+    </div>
 
     </div>
   </header><!-- End Header -->
