--- a/JGym/templates/index.html
+++ b/JGym/templates/index.html
@@ -78,6 +78,9 @@
 
       {% if  request.user.is_authenticated %}
       <a href="/" class="get-started-btn scrollto">Welcome</a>
+      {%else%}
+      <a href="/achivements" class="get-started-btn scrollto">Gym Awards</a>
+
       {% endif %}
     </div>
   </header><!-- End Header -->
