profile in progress

--- a/JGym/templates/base.html
+++ b/JGym/templates/base.html
@@ -54,7 +54,7 @@
              
               <li><a href="/attendance">Attendance</a></li>
         
-              <li><a href="/profile">View Profile</a></li>
+              <li><a href="/viewprofile">View Profile</a></li>
             </ul>
             {% if not request.user.is_authenticated %}
 
