--- a/JGym/templates/index.html
+++ b/JGym/templates/index.html
@@ -55,7 +55,7 @@
              
               <li><a href="#">Workouts</a></li>
 
-              <li><a href="/profile">View Profile</a></li>
+              <li><a href="/viewprofile">View Profile</a></li>
             </ul>
           </li>
 
