--- a/JGym/templates/index.html
+++ b/JGym/templates/index.html
@@ -53,8 +53,7 @@
               
               <li><a href="/join">Enroll</a></li>
              
-              <li><a href="#">Workouts</a></li>
-
+              <li><a href="/attendance">Attendance</a></li>
               <li><a href="/viewprofile">View Profile</a></li>
             </ul>
           </li>
